# Dyrwin

./: .gitignore  CMakeLists.txt  OutputHandler.cpp  README.md
apps/: CMakeLists.txt
apps/AbouCRD/: main.cpp
apps/RL/: PBL.cpp  main.cpp  main_conditional.cpp  main_democracy.cpp  main_pop.cpp  main_uncertainty.cpp
apps/SED/: crd_behaviors.cpp  crd_behaviors_main.cpp  pmain.cpp
include/: CRDPlayer.h  CRDSimulator.h  CollectiveRiskDilemma.h  Gmls.hpp  Utils.h
include/Dyrwin/: CRDPlayer.h  CRDSimulator.h  CollectiveRiskDilemma.h  CommandLineParsing.h  Distributions.h  LruCache.hpp  MoranProcess.h  OpenMPUtils.hpp  OutputHandlers.hpp  Sampling.h  SeedGenerator.h  Types.h  Utils.h
include/Dyrwin/AbouCRD/: CRDPlayer.h  CRDSimulator.h  CollectiveRiskDilemma.h  DataStruct.hpp  Utils.h
include/Dyrwin/ED/: ReplicatorDynamics.hpp
include/Dyrwin/PyMoran/: MoranProcess.hpp  PDImitation.h  PDImitationWrapper.cpp  StochDynamics.h  TraulsenMoran.h
include/Dyrwin/RL/: AbstractAgent.hpp  Agent.h  BatchQLearning.h  BatchQLearningAgent.h  BatchQLearningForgetAgent.h  CRDConditional.h  CRDConditionalCount.h  CRDDemocracy.h  CRDGame.h  CrdSim.hpp  Data.hpp  DiscountedQLearning.h  ESARSA.h  HistericQLearningAgent.hpp  PopContainer.hpp  QLearningAgent.h  RLUtils.h  RothErevAgent.h  SARSAAgent.h  SparseAgent.h  TimingUncertainty.hpp  Utils.h
include/Dyrwin/RL/algorithms/: AbstractRLAlgorithm.hpp  QLearning.h
include/Dyrwin/RL/helpers/: PopulationHelper.h
include/Dyrwin/RL/simulators/: CrdIslands.h  CrdPopulation.h
include/Dyrwin/SED/: MLS.hpp  MoranProcess.hpp  MoranProcessNPlayer.hpp  PDImitation.h  PairwiseMoran.hpp  StochDynamics.h  TraulsenMoran.h  Utils.hpp
include/Dyrwin/SED/behaviors/: CrdBehaviors.hpp
include/Dyrwin/SED/games/: AbstractGame.hpp  CrdGame.hpp  CrdGameTU.hpp  NormalFormGame.h
include/Dyrwin/SED/structure/: GarciaGroup.hpp  Group.hpp
include/Dyrwin/crd/: CRDPlayer.h  CRDSimulator.h  CollectiveRiskDilemma.h  Utils.h
include/Dyrwin/ipd/: IteratedPrisonersDilemma.cpp
include/Dyrwin/rl/: Agent.h  BatchQLearningAgent.cpp  BatchQLearningAgent.h  CRDGame.h  HistericQLearningAgent.hpp  QLearningAgent.h  RLUtils.h  RothErevAgent.h  TimingUncertainty.hpp
src/: CMakeLists.txt  CRDPlayer.cpp  CRDSimulator.cpp  CollectiveRiskDilemma.cpp  Distributions.cpp  OutputHandler.cpp  SeedGenerator.cpp  main.cpp
src/AbouCRD/: CRDPlayer.cpp  CRDSimulator.cpp  CollectiveRiskDilemma.cpp  DataStruct.cpp
src/ED/: ReplicatorDynamics.cpp
src/PyMoran/: EGTtoolsWrapper.cpp  MoranProcess.cpp  PDImitation.cpp  PDImitationWrapper.cpp  StochDynamics.cpp  TraulsenMoran.cpp  pmain.cpp
src/RL/: Agent.cpp  BatchQLearning.cpp  BatchQLearningAgent.cpp  BatchQLearningForgetAgent.cpp  CrdSim.cpp  Data.cpp  DiscountedQLearning.cpp  ESARSA.cpp  HistericQLearningAgent.cpp  PopContainer.cpp  QLearningAgent.cpp  RothErevAgent.cpp  SARSAAgent.cpp  Utils.cpp  main_pop.cpp  main_uncertainty.cpp
src/RL/algorithms/: QLearning.cpp
src/RL/helpers/: PopulationHelper.cpp
src/RL/simulators/: CrdIslands.cpp
src/SED/: EGTtoolsWrapper.cpp  MLS.cpp  MoranProcess.cpp  PDImitation.cpp  StochDynamics.cpp  TraulsenMoran.cpp  Utils.cpp  pmain.cpp
src/SED/behaviors/: CrdBehaviors.cpp
src/SED/games/: CrdGame.cpp  CrdGameTU.cpp  NormalFormGame.cpp
src/SED/structure/: GarciaGroup.cpp  Group.cpp
src/crd/: CRDSimulator.cpp
src/python/: EGTtoolsCRDWrapper.cpp  EGTtoolsWrapper.cpp
src/rl/: QLearningAgent.cpp  main.cpp  main_uncertainty.cpp
tests/: CMakeLists.txt  TestCounter.cpp  TestCrdGame.cpp  TestCrdSimConditionalIslandsGroup.cpp  TestCrdSimConditionalIslandsTUGroup.cpp  TestCrdSimConditionalIslandsTUThUGroup.cpp  TestCrdSimConditionalIslandsThUGroup.cpp  TestCrdSimIslands.cpp  TestCrdSimIslandsConditionalPopulation.cpp  TestCrdSimIslandsGroup.cpp  TestCrdSimIslandsPopulation.cpp  TestCrdSimIslandsTUConditionalPopulation.cpp  TestCrdSimIslandsTUGroup.cpp  TestCrdSimIslandsTUPopulation.cpp  TestCrdSimIslandsTUThUConditionalPopulation.cpp  TestCrdSimIslandsTUThUGroup.cpp  TestCrdSimIslandsTUThUPopulation.cpp  TestCrdSimIslandsThUConditionalPopulation.cpp  TestCrdSimIslandsThUGroup.cpp  TestCrdSimIslandsThUPopulation.cpp  TestCrdSimRunConditionalWellMixed.cpp  TestCrdSimRunWellMixed.cpp  TestCrdSimRunWellMixedTU.cpp  TestGeometric.cpp  TestIntSampling.cpp  TestPairwiseMoran.cpp  TestPopContainer.cpp  TestRandomSeeder.cpp  TestThresholdUncertainty.cpp  TestTimingUncertainty.cpp
