cmake_minimum_required(VERSION 3.9)


add_executable(testTU TestTimingUncertainty.cpp)
set_target_properties(testTU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testTU EGTTools)

add_executable(testThU TestThresholdUncertainty.cpp)
set_target_properties(testThU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})

add_executable(testCrdGame TestCrdGame.cpp)
set_target_properties(testCrdGame PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdGame EGTTools)

add_executable(testGeometric TestGeometric.cpp)
set_target_properties(testGeometric PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testGeometric EGTTools)

add_executable(testCounter TestCounter.cpp)
set_target_properties(testCounter PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})

add_executable(testPM TestPairwiseMoran.cpp)
set_target_properties(testPM PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testPM EGTTools)

add_executable(testSP TestIntSampling.cpp)
set_target_properties(testSP PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})

add_executable(testPopContainer TestPopContainer.cpp)
set_target_properties(testPopContainer PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testPopContainer EGTTools)

add_executable(testCrdSim TestCrdSimRunWellMixed.cpp)
set_target_properties(testCrdSim PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSim EGTTools)

add_executable(testCrdSimCond TestCrdSimRunConditionalWellMixed.cpp)
set_target_properties(testCrdSimCond PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimCond EGTTools)

add_executable(testCrdSimWMTU TestCrdSimRunWellMixedTU.cpp)
set_target_properties(testCrdSimWMTU PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimWMTU EGTTools)

add_executable(testCrdSimIslandsGroup TestCrdSimIslandsGroup.cpp)
set_target_properties(testCrdSimIslandsGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsGroup EGTTools)

add_executable(testCrdSimIslandsPop TestCrdSimIslandsPopulation.cpp)
set_target_properties(testCrdSimIslandsPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsPop EGTTools)

add_executable(testCrdSimIslandsTUGroup TestCrdSimIslandsTUGroup.cpp)
set_target_properties(testCrdSimIslandsTUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsTUGroup EGTTools)

add_executable(testCrdSimIslandsThUGroup testCrdSimIslandsThUGroup.cpp)
set_target_properties(testCrdSimIslandsThUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsThUGroup EGTTools)

add_executable(testCrdSimIslandsTUThUGroup testCrdSimIslandsTUThUGroup.cpp)
set_target_properties(testCrdSimIslandsTUThUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsTUThUGroup EGTTools)

add_executable(testCrdSimIslandsTUPop TestCrdSimIslandsTUPopulation.cpp)
set_target_properties(testCrdSimIslandsTUPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsTUPop EGTTools)

add_executable(testCrdSimIslandsThUPop TestCrdSimIslandsThUPopulation.cpp)
set_target_properties(testCrdSimIslandsThUPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsThUPop EGTTools)

add_executable(testCrdSimIslandsTUThUPop TestCrdSimIslandsTUThUPopulation.cpp)
set_target_properties(testCrdSimIslandsTUThUPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsTUThUPop EGTTools)

add_executable(testCrdSimConditionalIslandsGroup testCrdSimConditionalIslandsGroup.cpp)
set_target_properties(testCrdSimConditionalIslandsGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimConditionalIslandsGroup EGTTools)

add_executable(testCrdSimConditionalIslandsTUGroup testCrdSimConditionalIslandsTUGroup.cpp)
set_target_properties(testCrdSimConditionalIslandsTUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimConditionalIslandsTUGroup EGTTools)

add_executable(testCrdSimConditionalIslandsThUGroup testCrdSimConditionalIslandsThUGroup.cpp)
set_target_properties(testCrdSimConditionalIslandsThUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimConditionalIslandsThUGroup EGTTools)

add_executable(testCrdSimConditionalIslandsTUThUGroup testCrdSimConditionalIslandsTUThUGroup.cpp)
set_target_properties(testCrdSimConditionalIslandsTUThUGroup PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimConditionalIslandsTUThUGroup EGTTools)

add_executable(testCrdSimIslandsConditionalPop testCrdSimIslandsConditionalPopulation.cpp)
set_target_properties(testCrdSimIslandsConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsConditionalPop EGTTools)

add_executable(testCrdSimIslandsTUConditionalPop testCrdSimIslandsTUConditionalPopulation.cpp)
set_target_properties(testCrdSimIslandsTUConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsTUConditionalPop EGTTools)

add_executable(testCrdSimIslandsThUConditionalPop testCrdSimIslandsThUConditionalPopulation.cpp)
set_target_properties(testCrdSimIslandsThUConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsThUConditionalPop EGTTools)

add_executable(testCrdSimIslandsTUThUConditionalPop testCrdSimIslandsTUThUConditionalPopulation.cpp)
set_target_properties(testCrdSimIslandsTUThUConditionalPop PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${LTO_SUPPORTED})
target_link_libraries(testCrdSimIslandsTUThUConditionalPop EGTTools)

add_executable(testSeeder TestRandomSeeder.cpp)
#target_link_libraries(testCrdSimIslandsTUThUConditionalPop EGTTools)